kubernetes/deployment.yaml

---


---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: shinobi-cctv
    chart: shinobi-cctv-0.1
    heritage: ddk8s
    release: shinobi-cctv
  name: shinobi-cctv
  namespace: default
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: shinobi-cctv
    spec:
      containers:
      - env: null
        image: docker.io/cr1st1p/shinobi-cctv:0.1
        name: shinobi-cctv
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: /opt/shinobi/videos
          name: videos
        - mountPath: /config
          name: config
      securityContext:
        fsGroup: 101
      volumes:
      - name: videos
        persistentVolumeClaim:
          claimName: shinobi-cctv
      - configMap:
          name: shinobi-cctv
        name: config

---


---


---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-realm: Authentication Required - camera.mydomain.com
    nginx.ingress.kubernetes.io/auth-secret: camera.mydomain.com
    nginx.ingress.kubernetes.io/auth-type: basic
  name: camera.mydomain.com
  namespace: default
spec:
  rules:
  - host: camera.mydomain.com
    http:
      paths:
      - backend:
          serviceName: shinobi-cctv
          servicePort: 8080
  tls:
  - hosts:
    - camera.mydomain.com
    secretName: cert-mydomain-com



---


---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: shinobi-cctv
    chart: shinobi-cctv-0.1
    heritage: ddk8s
    release: shinobi-cctv
  name: shinobi-cctv
  namespace: default
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: shinobi-cctv
  type: ClusterIP
